--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/vue2-animate/dist/vue2-animate.min.css"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>septic</title>
+    <title>How many fucks does Shivani give today?</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but septic doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this fucks website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
